content/consul/v1.11.x/content/commands/config/list.mdx
---
layout: commands
page_title: 'Commands: Config List'
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-04T10:42:51-06:00
last_modified: 2025-11-04T10:42:51-06:00
# END AUTO GENERATED METADATA
---

# Consul Config List

Command: `consul config list`

Corresponding HTTP API Endpoint: [\[GET\] /v1/config/:kind](/api-docs/config#list-configurations)

The `config list` command lists all given config entries of the given kind.
See the [configuration entries docs](/docs/agent/config-entries) for more
details about configuration entries.

The table below shows this command's [required ACLs](/api#authentication). Configuration of
[blocking queries](/api-docs/features/blocking) and [agent caching](/api-docs/features/caching)
are not supported from commands, but may be from the corresponding HTTP endpoint.

| ACL Required<sup>1</sup>              |
| ------------------------------------- |
| `service:read`<br />`intentions:read` |

<sup>1</sup> The ACL required depends on the config entry kind being read:

| Config Entry Kind   | Required ACL      |
| ------------------- | ----------------- |
| ingress-gateway     | `service:read`    |
| proxy-defaults      | `<none>`          |
| service-defaults    | `service:read`    |
| service-intentions  | `intentions:read` |
| service-resolver    | `service:read`    |
| service-router      | `service:read`    |
| service-splitter    | `service:read`    |
| terminating-gateway | `service:read`    |

## Usage

Usage: `consul config list [options]`

#### API Options

@include 'http_api_options_client.mdx'

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

@include 'http_api_partition_options.mdx'

#### Config List Options

- `-kind` - Specifies the kind of the config entry to list.

## Examples

    $ consul config list -kind service-defaults
    billing
    db
    web
